Module03_Kubernetes/02-distributed/distributed_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  type: ClusterIP
  selector:
    app: todo-api-pod
  ports:
  - port: 80
    targetPort: 3001
