Module03_Kubernetes/02-distributed/distributed_front_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
spec:
  type: ClusterIP
  selector:
    app: todo-front-pod
  ports:
  - port: 80
    targetPort: 80
